# RdkEasyMeshControllerSSP

./: CONTRIBUTING.md  NOTICE  tmp_README
scripts/: RdkEasyMeshController.xml
source/: CMakeLists.txt  Makefile.am  collection.c  collection.h  cosa_emctl_apis.c  cosa_emctl_apis.h  cosa_emctl_dml.c  cosa_emctl_dml.h  plugin_main.c  plugin_main.h  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_mbi.c  ssp_mbi.h
